# StudyFF

./: .gitignore
ApiDemo/: CMakeLists.txt  build_ffmpeg_ios.sh  build_x264.sh  make_framework_ios.sh
ApiDemo/ApiDemo/: AppDelegate.h  AppDelegate.m  CoreImageViewController.h  CoreImageViewController.mm  GLViewController.h  GLViewController.m  GLViewController.mm  TextureRender.h  TextureRender.m  TextureRenderView.h  TextureRenderView.m  VideoView.h  VideoView.m  ViewController.h  ViewController.m  ViewController.mm  main.m
ApiDemo/ApiDemo.xcodeproj/: project.pbxproj
ApiDemo/ApiDemo.xcodeproj/project.xcworkspace/xcuserdata/birney1.xcuserdatad/: UserInterfaceState.xcuserstate
ApiDemo/ApiDemo.xcodeproj/project.xcworkspace/xcuserdata/bruce.xcuserdatad/: UserInterfaceState.xcuserstate
ApiDemo/ApiDemo.xcodeproj/xcshareddata/xcschemes/: ApiDemo.xcscheme
ApiDemo/ApiDemo.xcodeproj/xcuserdata/birney.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
ApiDemo/ApiDemo.xcodeproj/xcuserdata/birney.xcuserdatad/xcschemes/: xcschememanagement.plist
ApiDemo/ApiDemo.xcodeproj/xcuserdata/birney1.xcuserdatad/xcschemes/: xcschememanagement.plist
ApiDemo/ApiDemo/Base.lproj/: Main.storyboard
ApiDemo/ApiDemo/core/: AVFileReader.hpp  AssetReadeer.hpp  AssetReader.hpp  CIFileInput.hpp  CIFilterGray.hpp  CIFilterOverlay.hpp  CIFilterScale.hpp  CIImageReader.hpp  CIScreen.hpp  Filter.hpp  GLContext.hpp  GLFileInput.hpp  GLFilter.cpp  GLFilter.hpp  GLFrameInput.hpp  GLGrayFilter.hpp  GLJoinFilter.hpp  GLNV12TextureFrame.hpp  GLNV12ToRGBFilter.hpp  GLOverlayFilter.hpp  GLPlayer.hpp  GLProgram.hpp  GLScreen.hpp  GLTextureFrame.hpp  GLTextureReader.hpp  GLTransitionFilter.hpp  I420Reader.hpp  I420TextureCache.hpp  Linkable.hpp  NV12Reader.hpp  NV12Shader.hpp  NV12TextCache.hpp  Reader.hpp  TextureRender.hpp  TimeRange.hpp  i420Shader.hpp
ApiDemo/ApiDemoTests/: ApiDemoTests.m
ApiDemo/ApiDemoUITests/: ApiDemoUITests.m
Untitled.xcworkspace/: contents.xcworkspacedata
Untitled.xcworkspace/xcuserdata/birney1.xcuserdatad/: UserInterfaceState.xcuserstate
av/: .makefile1.swp  av  makefile  makefile0  makefile1  makefile2  makefile3  test.db
av/AV.xcodeproj/: project.pbxproj
av/AV.xcodeproj/xcshareddata/xcschemes/: AV.xcscheme
av/AV.xcodeproj/xcuserdata/birney.xcuserdatad/xcdebugger/: Breakpoints_v2.xcbkptlist
av/examples/: sdl_audio.cpp  sdl_texture.cpp
av/playground/: makefile
av/playground/src/: main.cpp  test.cpp  test.h
av/src/: .av.cpp.swp  .av_file.cpp.swp  AVDecoder.cpp  AVDecoder.hpp  AVFileReader.cpp  AVFileReader.hpp  add.cpp  add.h  av.cpp  av_file.cpp  av_file.h  div.cpp
av/src/test/: .sdl_test.cpp.swp  sdl_test.cpp  test.cpp  test.h
av/test/: sdl_test  sdl_test.cpp  sdl_texture
build-extra/: .gitignore  build_extra.sh  build_ffmpeg_ios.sh  build_x264_iOS.sh  make_framework_ios.sh
build-extra/build_fdk_aac/: build_fdk_aac.sh
build-extra/platform/iOS/: .gitignore  CMakeLists.txt  build_version.h
build_fdk_aac/: build_fdk_aac.sh
build_ffmpeg/: build_ffmpeg.sh  build_test.sh  traversing.sh
build_lame/: build_lame.sh
build_x264/: build_x264.sh  build_x264_test  build_x264_test.sh  build_x264_work.sh
ffmpeg/: build_ffmpeg.sh
ffmpeg/FFmpegTests/: FFmpegTests.m
ffmpeg/ffmpeg/: ffmpeg.h  ffmpeg.m
ffmpeg/ffmpeg-4.0.1/: config.h
ffmpeg/ffmpeg-4.0.1/doc/: config.texi
ffmpeg/ffmpeg-4.0.1/ffbuild/: config.fate  config.mak  config.sh
ffmpeg/ffmpeg-4.0.1/libavcodec/: codec_list.c  libavcodec.pc  videotoolbox.d
ffmpeg/ffmpeg-4.0.1/libavfilter/: filter_list.c  libavfilter.pc
ffmpeg/ffmpeg-4.0.1/libavformat/: libavformat.pc  wavenc.d
ffmpeg/ffmpeg-4.0.1/libavutil/: libavutil.pc
ffmpeg/ffmpeg-4.0.1/libswresample/: libswresample.pc
ffmpeg/ffmpeg-4.0.1/libswscale/: libswscale.pc
ffmpeg/ffmpeg.xcodeproj/: project.pbxproj
ffmpeg/ffmpegTests/: ffmpegTests.m
ffmpeg/framework/ffmpeg.framework/: Info.plist
ffmpeg/framework/ffmpeg.framework/Headers/: ffmpeg.h
ffmpeg/framework/ffmpeg.framework/_CodeSignature/: CodeDirectory  CodeRequirements-1  CodeResources
python/: Untitled.ipynb  stockShare.py  stock_basic_info.py
python/.ipynb_checkpoints/: Untitled-checkpoint.ipynb
(+9 files in other folders)
